# yapt-manager

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  Makefile  README.md  USAGE.md  pyproject.toml
src/: cache.rs  catalog.rs  cli.rs  config.rs  context.rs  display.rs  download.rs  echo.rs  errors.rs  install.rs  logger.rs  main.rs  plugins.rs  printer.rs  statics.rs  tests.rs  version.py  version.rs
src/catalog/: cached.rs  rest.rs
src/plugins/: metadata.rs  xmlparse.rs
tests/fixtures/lizmap/: metadata.txt
tests/fixtures/lizmap_server/: metadata.txt
