[package]
name = "yapt-mngr"
version = "0.1.1"
edition = "2024"
keywords = ["qgis", "plugins", "server"]
authors = ["David Marteau <david.marteau@3liz.com>"]
license = "BSD-2-Clause"
description = "A QGIS plugin manager"

[dependencies]
thiserror = "2"
anyhow = "1"
glob = "0.3"
semver = { version = "1", features = ["serde"] }
xml = "1"
log = { version = "0.4" }
clap = { version = "4", features = ["derive", "env", "cargo"] }
zip = { version = "8", default-features = false, features = ["deflate", "time"] }
serde = { version = "1",  features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde-human-readable"] }
tempfile = "3"
env_logger = "0.11"
http = "1.4"
toml =  { version = "0.9", features = ["serde"] } 
reqwest = { version = "0.13", features = ["stream", "json"] }
indicatif = { version = "0.18" }
futures = "0.3"
bytes = "1"
tokio = "1"
mime = "0.3"
strsim = "0.11"

[dependencies.rust-ini]
git = "https://github.com/dmarteau/rust-ini.git"
branch = "multiline-write-support"


[profile.release]
strip = "debuginfo"
